--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,5 +28,6 @@ jobs:
         cache: 'npm'
     - run: npm install 
     - run: npx playwright install 
+    - run: npm link
     - run: npm link testchamber
     - run: npm test
