--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "utilities for testing",
   "main": "index.js",
   "scripts": {
-    "test": "npx playwright test"
+    "test": "npx playwright test",
+    "test-coverage": "npx c8 --check-coverage npm test"
   },
   "typings": "index.d.ts",
   "repository": {
