--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.1.3",
   "description": "utilities for testing",
   "main": "index.js",
-  "scripts": {
-    "test": "npx playwright test",
-    "test-coverage": "npx c8 --check-coverage npm test"
+  "scripts": { 
+    "setup": "npx playwright install & npm install && npm link && npm link testchamber",  
+    "test": "npx c8 --check-coverage npx playwright test",
+    "test-nocoverage": "npx playwright test"
   },
   "typings": "index.d.ts",
   "repository": {
